# red

./: .gitignore  .gitmodules  ARCHITECTURE.md  CITATION.bib  CMakeLists.txt  Install_Instructions.md  README.md  README_new.md  ROADMAP.md  UI_OVERHAUL_PLAN.md  UI_STYLE_GUIDE.md  USER_GUIDE.md  UX_assessment.md  Vulkan_upgrade_info.md  active_learning_plans.md  build.bat  build.ps1  build.sh  build_cmd.bat  build_linux.sh  build_mac.sh  calibration_refinement_tests.md  clang_build_win.bat  convert_ts.py  csv_to_yolo.py  debug.sh  default_imgui_layout.ini  development_notes.md  install.sh  jarvis_landscape.md  landscape_and_next_steps.md  lightglue_refinement_study.md  local_build.sh  mac_dev.md  metal_upgrade_info.md  port_to_mac_summary.md  rat_calib_MVC_vs_REDexp.md  remove_opencv_strategy.md  run.sh  suggested_improvements.md  (+1 more)
.github/workflows/: release.yml
calibration_refinement_expts/: MVC_vs_REDv4_March17.md  aruco_calibration_with_refinement.md
data_exporter/: FLY.md  README.md  analyze_video_diversity.py  calibration_refinement.py  check_jarvis_dataset.py  check_yolo_dataset.py  check_yolopose_dataset.py  convert_ts.py  diff_labels.py  export_yolo_detection.py  export_yolo_obb_multi.py  export_yolo_obb_multi_plot.py  export_yolo_obb_opencv_flip.py  export_yolo_pose.py  extract_synced_frames.py  find_bad_annotations.py  jarvis2red3d.py  keypoints.py  make_clip.py  make_video.py  merge_jarvis_datasets.py  mount_nas_greatjig.sh  pydlt.py  red2yolopose.py  red3d2jarvis.py  red3d2jarvis_with_phases.py  red3d2yolo.py  red_to_colmap.py  requirements.txt  sandbox.ipynb  save_imgs_pynvcodec.py  setup_environment.sh  utils.py  validate_yolo_labels.py  yaml_utils.py
dev_docs/: RedPortToWindows.md
docs/: JARVIS_COTRACKER_INTEGRATION.md  LINUX_BUILD.md  projects.md
example/: fly.redproj  skeleton.json
legacy_md/: ANNOTATION_REFACTOR_PLAN.md  Install_Instructions.md  development_notes.md  old_tools.md  possible_directions.md
models/rodent/: rodent_no_collision.xml
packaging/homebrew/: README.md  red.rb
scripts/: bout_segmentation.py  bout_segmentation_v2.py  build_fly_model.py  cluster_fly_fit.sh  convert_onnx_to_coreml.py  convert_superpoint_coreml.py  create_fly_bout_db.py  create_full_traj_db.py  create_sparse_predictions.py  eval_qpos_export.py  export_bouts_to_red.py  fit_fly_body.py  fly_bout_ik.py  fly_scale_sweep.py  mjx_body_resize.py  mjx_body_resize_e2e.py  mjx_body_resize_experiments.py  mjx_fit_body_model.py  nerfstudio_export.py  plot_calibration_3d.py  prepare_fly_bout_data.py  progressive_refinement.sh  pth_to_coreml.py  test_fly_ik.py  test_jarvis_export.py  test_rat_ik.py  train_learned_ik.py  train_qpos_head.py  visual_hull.py
scripts/plotting/: __init__.py  arena.py  demo_arena_plots.py  fig_test.py  generate_pdfs.py  paper.mplstyle  plot_utils.py
skeleton/: README.txt
src/: AppDecUtils.h  Camera.cpp  Camera.h  ColorSpace.h  FFmpegDemuxer.cpp  FFmpegDemuxer.h  FrameData2D.cpp  FrameData2D.h  LabelManager.cpp  LabelManager.h  Logger.h  NvCodecUtils.h  NvDecoder.cpp  NvDecoder.h  SkelWorld.cpp  SkelWorld.h  annotation.h  annotation_csv.h  annotation_diagnostics.h  annotation_v1.h  app_context.h  arena_alignment.h  aruco_cuda.cu  aruco_cuda.h  aruco_detect.h  aruco_dict_data.h  aruco_metal.h  aruco_metal.mm  bout_inspector.h  buffer_utils.cpp  buffer_utils.h  calibration_pipeline.h  calibration_tool.h  camera.h  color_conversion_cpu.h  common.hpp  convert_pth_to_trt.py  cotracker_infer.cpp  cotracker_infer.h  create_image_cuda.h  (+92 more)
src/gui/: annotation_dialog.h  bbox_tool.h  body_model_window.h  bout_pose_overlay.h  bout_table.h  calib_aruco_section.h  calib_create_dialog.h  calib_kp_manual_section.h  calib_laser_section.h  calib_pointsource_section.h  calib_superpoint_section.h  calib_tele_section.h  calib_tool_state.h  calib_viewer_window.h  calibration_tool_window.h  export_window.h  frame_buffer_window.h  gui_bbox.h  gui_helpers.h  gui_keypoints.h  gui_obb.h  gui_save_load.h  gui_world.h  help_window.h  jarvis_export_window.h  jarvis_import_window.h  jarvis_predict_window.h  labeling_tool_window.h  main_menu_bar.h  main_menu_dialogs.h  navigator_dialogs.h  obb_tool.h  panel.h  panel_registry.h  popup_stack.h  project_window.h  sam_tool.h  settings_window.h  skeleton_creator_window.h  tele_viewer_window.h  (+6 more)
tests/: bench_coreml_accuracy.mm  bench_jarvis.cpp  bench_superpoint_native.cpp  eval_calibration.cpp  extract_dict.cpp  run_experimental_calib.cpp  test_annotation.cpp  test_aruco_detect.cpp  test_calib_crossval.cpp  test_calib_debug.cpp  test_calib_reload.cpp  test_contour_drill.cpp  test_cuda_kernels.cu  test_cuda_stress.cu  test_detect_granular.cpp  test_detect_timing.cpp  test_dict5x5.cpp  test_feature_refinement.cpp  test_framework.h  test_gui.cpp  test_holdout_compare.cpp  test_jarvis_golden.cpp  test_jarvis_import.cpp  test_jpeg_export.cpp  test_mujoco_geometry.cpp  test_mujoco_ik.cpp  test_mujoco_joints.cpp  test_mujoco_units.cpp  test_nerfstudio_export.cpp  test_ort_cuda.cpp  test_ort_inference.cpp  test_pipeline_run.cpp  test_sam_integration.cpp  test_stac_comparison.cpp  test_superpoint_pipeline.cpp  test_video_pipeline.cpp
tools/: compare_red_vs_python.py  compile_jarvis_trt.py  convert_labels_v1_to_v2.cpp  export_cotracker_torchscript.py  export_jarvis_trt.py  trace_jarvis_torchscript.py  validate_cotracker.py  validate_jarvis_trt.py
